syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message PartnerUser {
  Entity Entity = 1;
  string id_partner = 2;
  int32 name = 3;
  string username = 4;
  string id_cognito = 5;
  string id_role_application = 6;
}

message PartnerUserRequest {
  PartnerUser payload = 1;
}

message PartnerUserResponse {
  PartnerUser response = 1;
}

message PartnerUserListResponse {
  repeated PartnerUser response = 1;
}

service PartnerUserService {
  rpc Create(PartnerUserRequest) returns (PartnerUserResponse);
  rpc Update(PartnerUserRequest) returns (PartnerUserResponse);
  rpc FindAll(PartnerUserRequest) returns (PartnerUserListResponse);
  rpc FindOne(PartnerUserRequest) returns (PartnerUserResponse);
  rpc Enabled(Entity) returns (PartnerUserResponse);
  rpc Disable(Entity) returns (PartnerUserResponse);
}
